tests/snapshots/bundle_rules@rfc3627-BindingMode.snap
---
source: src/analyses/compute_rules.rs
info:
  bundle_name: rfc3627
  options:
    match_constructor_through_ref: true
    eat_inherited_ref_alone: true
    inherited_ref_on_ref: EatInner
    fallback_to_outer: true
    allow_ref_pat_on_ref_mut: true
    simplify_deref_mut: true
    downgrade_mut_inside_shared: true
    eat_mut_inside_shared: true
    ref_binding_on_inherited: ResetBindingMode
    mut_binding_on_inherited: Error
    always_inspect_bm: false
---
p0 @ e.0: T0,  p1 @ e.1: T1
--------------------------- "Constructor"
[p0, p1] @ e: [T0, T1]

p0 @ &(*e).0: &T0,  p1 @ &(*e).1: &T1
------------------------------------- "ConstructorRef"
[p0, p1] @ e: &[T0, T1]

p0 @ &mut (*e).0: &mut T0,  p1 @ &mut (*e).1: &mut T1
----------------------------------------------------- "ConstructorRef"
[p0, p1] @ e: &mut [T0, T1], e mutable

p0 @ &(*e).0: &T0,  p1 @ &(*e).1: &T1
---------------------------------------- "ConstructorRef(ForceReadOnly)"
[p0, p1] @ e: &mut [T0, T1], e read-only

[p0, p1] @ &**e: &T
------------------- "ConstructorMultiRef"
[p0, p1] @ e: &&T

[p0, p1] @ &**e: &T
--------------------- "ConstructorMultiRef"
[p0, p1] @ e: &&mut T

[p0, p1] @ &**e: &T
--------------------- "ConstructorMultiRef"
[p0, p1] @ e: &mut &T

[p0, p1] @ &mut **e: &mut T
------------------------------------ "ConstructorMultiRef"
[p0, p1] @ e: &mut &mut T, e mutable

[p0, p1] @ &**e: &T
-------------------------------------- "ConstructorMultiRef(ForceReadOnly)"
[p0, p1] @ e: &mut &mut T, e read-only

p @ *e: T
---------------------------------- "Deref(EatOuter)"
&p @ e: &T, binding_mode(e) = move

p @ *e: T
------------------------------------------------------- "Deref(EatOuter)"
&p @ e: &T, binding_mode(e) = ref, T is not a reference

p @ *e: T
------------------------------------------ "Deref(EatOuter)"
&mut p @ e: &mut T, binding_mode(e) = move

p @ *e: T
------------------------------------------------------------------- "Deref(EatOuter)"
&mut p @ e: &mut T, binding_mode(e) = ref mut, T is not a reference

p @ &**e: &T
---------------------------------- "Deref(EatInner)"
&p @ e: &&T, binding_mode(e) = ref

p @ &**e: &T
------------------------------------------ "Deref(EatInner)"
&mut p @ e: &&mut T, binding_mode(e) = ref

p @ &mut **e: &mut T
------------------------------------------------------------- "Deref(EatInner)"
&mut p @ e: &mut &mut T, binding_mode(e) = ref mut, e mutable

p @ *e: &T
---------------------------------------------- "Deref(EatInner, FallbackToOuter)"
&mut p @ e: &mut &T, binding_mode(e) = ref mut

p @ &**e: &T
------------------------------------------ "Deref(EatInner, ForceReadOnly)"
&p @ e: &mut &T, binding_mode(e) = ref mut

p @ &**e: &T
--------------------------------------------------------------- "Deref(EatInner, ForceReadOnly)"
&mut p @ e: &mut &mut T, binding_mode(e) = ref mut, e read-only

p @ *&*e: T
-------------------------------------- "DerefMutWithShared(EatOuter)"
&p @ e: &mut T, binding_mode(e) = move

p @ *&*e: T
--------------------------------------------------------------- "DerefMutWithShared(EatOuter)"
&p @ e: &mut T, binding_mode(e) = ref mut, T is not a reference

p @ &*&**e: &T
-------------------------------------- "DerefMutWithShared(EatInner)"
&p @ e: &&mut T, binding_mode(e) = ref

p @ &*&**e: &T
---------------------------------------------- "DerefMutWithShared(EatInner)"
&p @ e: &mut &mut T, binding_mode(e) = ref mut

ref x @ *e: T
------------------------------------ "RefBindingResetBindingMode"
ref x @ e: &T, binding_mode(e) = ref

ref x @ *e: T
-------------------------------------------- "RefBindingResetBindingMode"
ref x @ e: &mut T, binding_mode(e) = ref mut

ref mut x @ *e: T
---------------------------------------- "RefBindingResetBindingMode"
ref mut x @ e: &T, binding_mode(e) = ref

ref mut x @ *e: T
------------------------------------------------ "RefBindingResetBindingMode"
ref mut x @ e: &mut T, binding_mode(e) = ref mut

x @ &e: &T
------------------------------------ "BindingBorrow"
ref x @ e: T, binding_mode(e) = move

x @ &mut e: &mut T
---------------------------------------- "BindingBorrow"
ref mut x @ e: T, binding_mode(e) = move


-------- "Binding"
x @ e: T


------------------------------------ "Binding"
mut x @ e: T, binding_mode(e) = move
